# guix.el

./: .gitignore  Makefile  Makefile.am  NEWS  README  README.org  THANKS  build-html.scm  configure.ac  doc.html  guix-backend.el  guix-base.el  guix-helper.scm  guix-history.el  guix-info.el  guix-list.el  guix-main.scm  guix-utils.el  guix.el  guix.scm  index.html  index.org  screenshots.html
build-aux/: build-env.el
css/: README  default.css  header.css  image-gallery.css  manual.css  style.css
doc/: emacs-guix.texi  htmlxref.cnf
elisp/: guix-about.el  guix-auto-mode.el  guix-backend.el  guix-base.el  guix-buffer.el  guix-build-config.el.in  guix-build-log.el  guix-command.el  guix-config.el  guix-config.el.in  guix-default-config.el  guix-derivation-mode.el  guix-derivation.el  guix-devel.el  guix-emacs.el  guix-entry.el  guix-env-var.el  guix-external.el  guix-geiser.el  guix-graph.el  guix-guile.el  guix-hash.el  guix-help-vars.el  guix-help.el  guix-history.el  guix-hydra-build.el  guix-hydra-jobset.el  guix-hydra.el  guix-info.el  guix-license.el  guix-list.el  guix-location.el  guix-messages.el  guix-misc.el  guix-package.el  guix-pcomplete.el  guix-popup.el  guix-prettify.el  guix-profiles.el  guix-read.el  (+20 more)
images/: README
manual/0.3/: emacs-guix.html
manual/0.3.1/: emacs-guix.html
manual/0.3.1/html_node/: Command-Index.html  Hydra.html  Keymaps.html
manual/0.3.2/: emacs-guix.html
manual/0.3.2/html_node/: Completions.html  Graph-Configuration.html  Guile-and-Build-Options.html  Packages.html  index.html
manual/0.3.3/html_node/: Development.html  Generation-Keys.html  Help.html  List_002fInfo-Interface.html  Miscellaneous-Commands.html  Package-Commands.html  Package-Locations.html  Popup-Interface.html  Prettify-Mode.html
manual/0.3.4/: emacs-guix.html
manual/0.3.4/html_node/: Build-Log-Mode.html  Completions.html  Configuration.html  Development.html  Generation-Commands.html  Help.html  Hydra.html  Info-buffer.html  Introduction.html  Keymaps.html  List-buffer.html  List_002fInfo-Interface.html  Miscellaneous-Commands.html  Package-Locations.html  Package-Management.html  Profiles.html  Requirements.html  Using-from-Git.html  Variable-Index.html  index.html
manual/0.3/html_node/: Build-Log-Mode.html  Command-Index.html  Completions.html  Generation-Commands.html  Generations.html  Guile-and-Build-Options.html  Help.html  Info-buffer.html  Introduction.html  List-buffer.html  List_002fInfo-Keys.html  Miscellaneous-Commands.html  Package-Keys.html  Package-Locations.html  Package-Management.html  Packages.html  Popup-Interface.html  Prettify-Mode.html  Profiles.html  Using-from-Git.html  Variable-Index.html  index.html
manual/0.4/: emacs-guix.html
manual/0.4/html_node/: Buffer-Names.html  Command-Index.html  Concept-Index.html  Hydra.html  Installation.html  Package-Commands.html  Using-from-Git.html  Using-the-Manual-from-Git.html  Variable-Index.html  index.html
manual/git/: emacs-guix.html
manual/git/html_node/: Buffer-Names.html  Command-Index.html  Completions.html  Concept-Index.html  Configuration.html  Development.html  Generation-Keys.html  Generations.html  Graph-Configuration.html  Help.html  Hydra.html  Info-buffer.html  Installation.html  Introduction.html  Keymaps.html  List_002fInfo-Interface.html  Miscellaneous-Commands.html  Package-Commands.html  Package-Licenses.html  Package-Management.html  Prettify-Mode.html  Requirements.html  Using-from-Git.html  Using-the-Manual-from-Git.html  Variable-Index.html  index.html
manual/latest/: emacs-guix.html
manual/latest/html_node/: Buffer-Names.html  Build-Log-Mode.html  Command-Index.html  Completions.html  Concept-Index.html  Configuration.html  Development.html  Generation-Commands.html  Generation-Keys.html  Generations.html  Graph-Configuration.html  Guile-and-Build-Options.html  Help.html  Hydra.html  Info-buffer.html  Installation.html  Introduction.html  Keymaps.html  List-buffer.html  List_002fInfo-Interface.html  List_002fInfo-Keys.html  Miscellaneous-Commands.html  Miscellaneous-Configuration.html  More-Package-Commands.html  Package-Commands.html  Package-Keys.html  Package-Licenses.html  Package-Locations.html  Package-Management.html  Packages.html  Popup-Interface.html  Prettify-Mode.html  Prettify-Variables.html  Profile-Commands.html  Profile-Keys.html  Profiles-and-Generations.html  Profiles.html  Requirements.html  Service-Commands.html  Service-Locations.html  (+8 more)
scheme/: Makefile.am  emacs-guix.scm  site.scm
scheme/emacs-guix/: actions.scm  commands.scm  emacs.scm  generations.scm  graph.scm  hash.scm  helper.scm.in  licenses.scm  lint.scm  locations.scm  main.scm  pack.scm  packages.scm  profiles.scm  refresh.scm  services.scm  store-items.scm  system-generations.scm  system.scm  utils.scm
scheme/site/: doc.scm  main.scm  screenshots.scm  shared.scm  utils.scm
